tests/error/struct_errors/invalid_attribute_assign2.err
Error: Type mismatch (at $FILE:12:6)
   | 
10 | @guppy
11 | def foo(s: MyStruct) -> None:
12 |     s.x = (1, 2)
   |       ^ Cannot assign expression of type `(int, int)` to field `x`
   |         of type `int`

Guppy compilation failed due to 1 previous error
